# chess-rs

./: Cargo.toml  chess-rs-6d88327c008e00c4.js  chess-rs-6d88327c008e00c4_bg.wasm  index-81e26517b18c47bd.js  index-81e26517b18c47bd_bg.wasm  index-cc66a8c38c4aba30.js  index-cc66a8c38c4aba30_bg.wasm  index.css  index.html  index.scss
src/: main.rs
src/game/: mod.rs
